--- a/src/main/resources/iitu/tsay/quizziz/signUpPage.fxml
+++ b/src/main/resources/iitu/tsay/quizziz/signUpPage.fxml
@@ -39,7 +39,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #220447;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iitu.tsay.quizziz.LoginPageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #220447;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iitu.tsay.quizziz.SignUpController">
    <children>
       <Label layoutX="236.0" layoutY="49.0" text="QUIZZIZ" textFill="#7300ff">
          <font>
@@ -50,12 +50,13 @@
       <Label layoutX="14.0" layoutY="369.0" text="V 1.0" textFill="WHITE" />
       <TextField fx:id="usernameField" layoutX="220.0" layoutY="140.0" promptText="Username" style="-fx-background-color: #ffffff;" />
       <PasswordField fx:id="passwordField" layoutX="220.0" layoutY="175.0" promptText="Password" style="-fx-background-color: #ffffff;" />
-      <Button fx:id="submitButton" layoutX="273.0" layoutY="226.0" mnemonicParsing="false" style="-fx-background-color: #ffffff;" text="Submit" textFill="#7300ff">
+      <Button fx:id="submitButton" layoutX="270.0" layoutY="249.0" mnemonicParsing="false" style="-fx-background-color: #ffffff;" text="Submit" textFill="#7300ff">
          <font>
             <Font size="11.0" />
          </font>
       </Button>
-      <Label fx:id="signUpLabel" layoutX="277.0" layoutY="272.0" text="Sign up" textFill="WHITE" />
-      <Label fx:id="alertLabel" layoutX="209.0" layoutY="200.0" textFill="RED" />
+      <Label fx:id="loginLabel" layoutX="278.0" layoutY="286.0" text="Log in" textFill="WHITE" />
+      <Label fx:id="alertLabel" layoutX="176.0" layoutY="117.0" textFill="RED" />
+      <PasswordField fx:id="rePasswordField" layoutX="220.0" layoutY="209.0" promptText="Re-password" style="-fx-background-color: #ffffff;" />
    </children>
 </AnchorPane>
